momentum saver spacing issue

--- a/blocks/tmb-teaser/tmb-teaser.scss
+++ b/blocks/tmb-teaser/tmb-teaser.scss
@@ -20,7 +20,7 @@
 }
 .momentum-block > .tmb-teaser-content {
     width: 600px;
-    height: 437px;
+    height: auto;
 
     picture {
       height: 100%;
